# dialog-sql

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
analytics/dbt/: dbt_project.yml  profiles.yml
analytics/dbt/models/marts/: fct_order_value_by_product_line.sql
analytics/dbt/models/staging/: stg_customers.sql  stg_orders.sql
data/: README.md
evaluations/: nl2sql.yaml
infra/docker/: compose.yml
infra/postgres/init/: 01_schema.sql  02_seed.sql
policies/: example-users.json  rowfilter.rego
scripts/: evaluate_nl2sql.py
services/api/: Dockerfile
services/api/app/: config.py  main.py
services/api/app/exec/: duckdb_gateway.py
services/api/app/flight/: run_flight.py  server.py
services/api/app/lineage/: dbt_capture.py
services/api/app/llm/: model.py
services/api/app/security/: opa.py
services/api/app/sql/: compiler.py
tests/: test_eval_suite.py  test_nl2sql_samples.py
