
[tool.poetry]
name = "dialog-sql"
version = "0.1.0"
description = "Conversational SQL engine with federation, OPA RLS, and dbt lineage"
authors = ["Dialog SQL Team <dev@dialog-sql.local>"]
readme = "README.md"
packages = [{ include = "services/api/app", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.0"
sqlglot = "^25.13.0"
duckdb = "^1.0.0"
psycopg2-binary = "^2.9.9"
transformers = "^4.44.2"
torch = "^2.4.1"
dbt-duckdb = "^1.8.2"
pyarrow = "^16.1.0"
httpx = "^0.27.2"
orjson = "^3.10.7"
cachetools = "^5.3.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
